test endPoint added

--- a/src/main/resources/application-dev.yml
+++ b/src/main/resources/application-dev.yml
@@ -1,6 +1,8 @@
 
 server:
-  port: 8182	
+  port: 8182
+  servlet:
+    context-path: /exception/v1/
 spring:
   application:
     name: Exception_Hanlding
